--- a/client/creationPlayer/player.css
+++ b/client/creationPlayer/player.css
@@ -23,10 +23,11 @@ h1{
     margin: 10px 10px 0px 10px;
 }
 .btnTop{
-    width: 250px;
-    height: 100px;
+    width: 200px;
+    height: 50px;
     border-radius: 50px;
     background-color: #D3A94C;
+    border: 3px solid #D3A94C;
 }
 .tableSelection{
     position: absolute;
@@ -37,6 +38,10 @@ h1{
     border: 5px solid #D3A94C;
     border-radius: 50px;
     background-color: rgba(217, 217, 217, 0.75);
+}
+td img{
+    width: 195px;
+    height: 140px;
 }
 .cardHero{
     position: absolute;
@@ -51,6 +56,8 @@ h1{
     flex-direction: column;
     align-items: center;
     padding: 50px;
+    visibility: hidden;
+    text-align: center;
 }
 .statHero{
     background-color: rgba(0, 0, 0, 0.25);
@@ -58,6 +65,7 @@ h1{
     height: 50px;
     border-radius: 50px;
     margin: 5px;
+    font-size: 35px;
     text-align: center;
     display: flex;
     align-content: center;
@@ -69,13 +77,17 @@ h1{
     height: 92px;
     border-radius: 50px;
     margin-top: 15px;
+    font-size: 25px;
     background-color: #00660A;
+    border: 3px solid #D3A94C;
     color: #D3A94C;
 }
 #inputName{
     background-color: #D3A94C;
+    border: 3px solid #D3A94C;
     width: 400px;
     height: 50px;
+    font-size: 35px;
     border-radius: 50px;
     text-align: center;
 }
