--- a/client/ranking/ranking.css
+++ b/client/ranking/ranking.css
@@ -42,6 +42,14 @@ body{
     scale: .5;
     padding-bottom: 150px;
 }
+
+.listeplayer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    
+}
 .players{
     height: 75px;
     width: 600px;
@@ -53,6 +61,7 @@ body{
     font-family: Inknut Antiqua;
     font-size: 50px;
     font-weight: 700;
+    margin-bottom: 50px;
 }
 
 .button{
