--- a/client/creationPlayer/player.css
+++ b/client/creationPlayer/player.css
@@ -58,6 +58,15 @@ td img{
     padding: 50px;
     text-align: center;
 }
+.close {
+    position: absolute;
+    top: 15px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+    color:#D3A94C;
+    cursor: pointer;
+}
 .statHero{
     background-color: rgba(0, 0, 0, 0.25);
     width: 400px;
