--- a/client/ranking/ranking.css
+++ b/client/ranking/ranking.css
@@ -12,7 +12,7 @@
 
 
 body{
-    background: url(./asset/fond.jpg) center/cover;
+    background: url(./assetracking/fond.jpg) center/cover;
     min-height: 100vh;
     overflow: hidden;
 }
