--- a/client/main.css
+++ b/client/main.css
@@ -27,10 +27,10 @@ body{
     align-items: flex-start;
 }
 
-.banner .img{
+/*.banner .img{
     width: 200px;
     
-}
+}*/
 
 .button{
     width: 250px;
