--- a/client/main.css
+++ b/client/main.css
@@ -18,9 +18,11 @@ body{
     background: url(./assetindex/Fond-start.jpg) center/cover;
     min-height: 100vh;
     overflow: hidden;
+    display: flex;
 }
 
 .banner{
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -59,4 +61,25 @@ body{
 
 a{
     text-decoration: none;
+}
+
+.entrer{
+    position: fixed;
+    bottom: 15%;
+    left: 50%;
+    font-family: Metal Mania;
+    border:5px solid red ;
+    height: 500px;
+    width: 250px;
+    border-radius:100px 100px 0 0;
+    text-align: center;
+    color: var(--bord);
+    font-size: 50px;
+    font-weight: 400;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
