--- a/client/creationPlayer/player.css
+++ b/client/creationPlayer/player.css
@@ -1,46 +1,68 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap');
+
+:root{
+    --marron:#A30000;
+    --noir:#000;
+    --bord:#D3A94C;
+    --vert:#00660A;
+    --rouge:#FF0000;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 body{
-    background-image: url('../img/arena_jpg/createPlayer.jpg');
-    background-repeat: no-repeat;
-    /*background-attachment: fixed;*/
-    /*background-position: center;*/
-    background-size: cover;
-    background-attachment: fixed;
+    background: url(./asset/fond-player.jpg) center/cover;
+    min-height: 100vh;
     overflow: hidden;
 }
 h1{
     position: absolute;
+    font-family: Metal Mania;
+    color: var(--bord);
+    font-size: 50px;
     top: 9%;
     left: 22%;
 }
 .navBtn{
-    display: flex;
-    justify-content: space-between;
     margin: 10px 10px 0px 10px;
 }
-.btnTop{
-    width: 200px;
-    height: 50px;
+.button{
+    position: absolute;
+    top: 25px;
+    width: 250px;
+    height: 100px;
+    flex-shrink: 0;
     border-radius: 50px;
-    background-color: #D3A94C;
-    border: 3px solid #D3A94C;
+    background: var(--bord);
+    color: var(--noir);
+    text-align: center;
+    font-family: Metal Mania;
+    font-size: 50px;
+    font-weight: 400;
+    padding-top: 15px;
+}
+a{
+    text-decoration: none;
+    text-decoration-color: var(--bord);
+    color: var(--noir);
 }
 .tableSelection{
     position: absolute;
-    width: 803px;
-    height: 750px;
+    width:inherit;
+    height: inherit;
     top: 15%;
     left: 10%;
-    border: 5px solid #D3A94C;
+    padding: auto;
+    border: 5px solid var(--bord);
     border-radius: 50px;
     background-color: rgba(217, 217, 217, 0.75);
 }
+
 td img{
-    width: 195px;
+    width: 145px;
     height: 140px;
 }
 .cardHero{
@@ -49,7 +71,7 @@ td img{
     height: 750px;
     top: 15%;
     right: 10%;
-    border: 5px solid #D3A94C;
+    border: 5px solid var(--bord);
     border-radius: 50px;
     background-color: rgba(217, 217, 217, 0.75);
     display: flex;
@@ -60,11 +82,11 @@ td img{
 }
 .close {
     position: absolute;
-    top: 15px;
-    right: 25px;
-    font-size: 35px;
+    top: 40px;
+    right: 15px;
+    font-size: 70px;
     font-weight: bold;
-    color:#D3A94C;
+    color: #D3A94C;
     cursor: pointer;
 }
 .statHero{
@@ -74,6 +96,7 @@ td img{
     border-radius: 50px;
     margin: 5px;
     font-size: 35px;
+    font-family: Metal Mania;
     text-align: center;
     display: flex;
     align-content: center;
@@ -86,23 +109,28 @@ td img{
     border-radius: 50px;
     margin-top: 15px;
     font-size: 25px;
-    background-color: #00660A;
-    border: 3px solid #D3A94C;
-    color: #D3A94C;
+    font-family: Metal Mania;
+    background-color: var(--vert);
+    border: 3px solid var(--bord);
+    color: var(--bord);
 }
 #inputName{
-    background-color: #D3A94C;
-    border: 3px solid #D3A94C;
+    background-color: var(--bord);
+    border: 3px solid var(--bord);
+    font-family: Metal Mania;
     width: 400px;
     height: 50px;
-    font-size: 35px;
+    font-size: 45px;
     border-radius: 50px;
     text-align: center;
 }
 ::placeholder{
     text-align: center;
 }
-span{
-    position: absolute;
-    margin: -45px 10px;
+
+
+#modalImage{
+    height: 140px;
+    width: 140px;
+
 }
