25-08-23 fin de journee

--- a/client/battle fight/battle.css
+++ b/client/battle fight/battle.css
@@ -1,16 +1,27 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap');
+
+:root{
+    --marron:#A30000;
+    --noir:#000;
+    --bord:#D3A94C;
+    --vert:#00660A;
+    --rouge:#FF0000;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 body{
-    background-image: url('../img/arena_jpg/arena2.jpg');
-    background-repeat: no-repeat;
-    /*background-attachment: fixed;*/
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
+    background: url(./asset/Fond-arena1.jpg) center/cover;
+    min-height: 100vh;
     overflow: hidden;
+}
+h1{
+    font-family: Metal Mania;
+    color: var(--bord);
+    font-size: 50px;
 }
 .top{
     display: flex;
@@ -40,6 +51,33 @@ body{
     border: 3px solid #D3A94C;
     font-weight: bold;
     font-size: 30px;
+}
+.restart{
+    width: 200px;
+    height: 100px;
+    background-color: #00660A;
+    color: #D3A94C;
+    border-radius: 50px;
+    border: 3px solid #D3A94C;
+    font-weight: bold;
+    font-family: Metal Mania;
+    color: var(--bord);
+    font-size: 30px;
+}
+.finish{
+    width: 200px;
+    height: 100px;
+    background-color: #A30000;
+    color: #D3A94C;
+    border-radius: 50px;
+    border: 3px solid #D3A94C;
+    font-weight: bold;
+    font-size: 30px;
+    font-family: Metal Mania;
+    color: var(--bord);
+}
+#finFight{
+    display: none;
 }
 .toptop{
     text-align: center;
@@ -73,13 +111,23 @@ body{
     height: 152px;
     
 }
-.infoGame{
+#infoGame{
     width: 500px;
     height: 500px;
     background-color: rgba(0, 0, 0, 0.50);
     border-radius: 30px;
     margin: 10px;
     border:5px solid #D3A94C;
+    display: none;
+    color: #FEFAFA;
+    text-align: center;
+    font-family: Inter;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    overflow-x: none;
+    overflow-y: scroll;
 }
 .barLife{
     width: 100%;
@@ -88,65 +136,95 @@ body{
     bottom: -200px;
     position: absolute;
     left: -130px;
+    transition: all 0.5s ease;
 }
 .hero2T1{
     bottom: -75px;
     left: -25px;
     position: absolute;
+    transition: all 0.5s ease;
 }
 .hero3T1{
-    bottom: -200px;
+    bottom: -76px;
     position: absolute;
-    left: -380px;
+    left: -235px;
+    transition: all 0.5s ease;
 }
 .hero4T1{
-    bottom: -75px;
+    bottom: -200px;
     position: absolute;
-    left: -250px;
+    left: -340px;
+    transition: all 0.5s ease;
 }
 .hero5T1{
     bottom: -200px;
     position: absolute;
     left: 100px;
+    transition: all 0.5s ease;
 }
 .hero1T2{
     bottom: -40px;
     position: absolute;
-    left: 180px;
+    left: -40px;
+    transition: all 0.5s ease;
 }
 .hero2T2{
-    bottom: -40px;
+    bottom: 75px;
     position: absolute;
-    left: -40px;
+    left: 65px;
+    transition: all 0.5s ease;
 }
 .hero3T2{
     bottom: 75px;
     position: absolute;
     left: -150px;
+    transition: all 0.5s ease;
 }
 .hero4T2{
     bottom: -40px;
     position: absolute;
-    left: -270px;
+    left: 175px;
+    transition: all 0.5s ease;
 }
 .hero5T2{
-    bottom: 75px;
+    bottom: -40px;
     position: absolute;
-    left: 75px;
+    left: -270px;
+    transition: all 0.5s ease;
 }
-.lifeBarT1{
-    width: 50px;
-    height: 10px;
+#hero1lb, #hero3lb, #hero5lb, #hero7lb, #hero9lb{
+    width: 100px;
+    height: 15px;
     position: absolute;
-    left: 60px;
+    left: 35px;
     background-color: #00660A;
     border: 2px solid #000;
+    z-index: 2;
 }
-.lifeBarT2{
-    width: 50px;
-    height: 10px;
+.dieBarT1{
+    width: 100px;
+    height: 15px;
     position: absolute;
-    left: 75px;
+    left: 35px;
+    background-color: #A30000;
+    border: 2px solid #000;
+    z-index: 1;
+}
+#hero2lb, #hero4lb, #hero6lb, #hero8lb, #hero10lb{
+    width: 100px;
+    height: 15px;
+    position: absolute;
+    left: 45px;
     background-color: #00660A;
     border: 2px solid #000;
+    z-index: 2;
+}
+.dieBarT2{
+    width: 100px;
+    height: 15px;
+    position: absolute;
+    left: 45px;
+    background-color: #A30000;
+    border: 2px solid #000;
+    z-index: 1;
 }
