--- a/client/creationTeam/team.css
+++ b/client/creationTeam/team.css
@@ -49,7 +49,7 @@ body {
 	display: none;
 	width: 850px;
 	height: 100px;
-	flex-shrink: 0;
+	flex-shrink: 1;
 	border-radius: 50px;
 	border: 5px solid var(--bord);
 	background: var(--rouge);
@@ -60,6 +60,7 @@ body {
 	font-weight: 400;
 	padding-top: 15px;
 	margin-top: 42px;
+	text-align: center;
 }
 
 #buttong {
