--- a/client/battle fight/battle.css
+++ b/client/battle fight/battle.css
@@ -100,7 +100,7 @@ h1{
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    overflow-x: none;
+    /* overflow-x: none; */
     overflow-y: scroll;
 }
 
@@ -108,6 +108,8 @@ h1{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    height: 80vh;
 }
 
 #life{
@@ -117,4 +119,33 @@ h1{
     width: 80%;
     margin: 0 auto;
     z-index: 1;
+}
+
+
+#team1, #team2 {
+    height: 50%;
+    width: 50%;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+}
+
+#team1 {
+    justify-content: flex-start;
+}
+
+#team2 {
+    justify-content: flex-end;
+}
+
+.move-mid_team1 {
+    left: 80%;
+}
+
+.move-mid_team2 {
+    right: 80%;
+}
+
+#T1hero0,#T1hero1,#T1hero2,#T1hero3,#T1hero4,#T2hero0,#T2hero1,#T2hero2,#T2hero3,#T2hero4{
+    transition: all 5s ease;
 }
