--- a/client/battle fight/battle.css
+++ b/client/battle fight/battle.css
@@ -112,7 +112,7 @@ h1{
     height: 80vh;
 }
 
-#life{
+#T1life0, #T1life1, #T1life2, #T1life3, #T1life4,#T2life0, #T2life1, #T2life2, #T2life3, #T2life4 {
     background-color: #00660A;
     border: 1px solid #000;
     height: 15px;
@@ -146,6 +146,47 @@ h1{
     right: 80%;
 }
 
-#T1hero0,#T1hero1,#T1hero2,#T1hero3,#T1hero4,#T2hero0,#T2hero1,#T2hero2,#T2hero3,#T2hero4{
-    transition: all 5s ease;
+#T1hero0{
+    bottom: -150px;
+    transition: all 0.5s ease;
+}
+#T1hero1{
+    bottom: 25px;
+    transition: all 0.5s ease;
+}
+#T1hero2{
+    bottom: 200px;
+    transition: all 0.5s ease;
+}
+#T1hero3{
+    bottom: 115px;
+    margin-left: 150px;
+    transition: all 0.5s ease;
+}
+#T1hero4{
+    bottom: -60px;
+    margin-left: 150px;
+    transition: all 0.5s ease;
+}
+#T2hero0{
+    bottom: 60px;
+    transition: all 0.5s ease;
+}
+#T2hero1{
+    bottom: -125px;
+    transition: all 0.5s ease;
+}
+#T2hero2{
+    bottom: 225px;
+    transition: all 0.5s ease;
+}
+#T2hero3{
+    margin-right: 150px;
+    bottom: 125px;
+    transition: all 0.5s ease;
+}
+#T2hero4{
+    margin-right: 150px;
+    bottom: -50px;
+    transition: all 0.5s ease;
 }
